@@ -3,6 +3,9 @@ Broker:
   then try "nobody" instead. This reduces the burden on users installing
   Mosquitto themselves.
 - Add support for Unix domain socket listeners.
+- Add `bridge_outgoing_retain` option, to allow outgoing messages from a
+  bridge to have the retain bit completely disabled, which is useful when
+  bridging to e.g. Amazon or Google.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
